# dbt-workshop

./: .gitignore  README.md  pyproject.toml
northwind/: dbt_project.yml
northwind/models/marts/: sales.sql
northwind/models/raw/crm/: raw_crm__nova_tabela.sql
northwind/models/reports/crm/: report_accumulated_revenues.sql  report_clients_to_marketing.sql  report_top_10_products.sql  report_total_revenues_1997.sql  report_total_revenues_per_customer_company.sql  report_uk_clients_who_pay_more_than_1000.sql
northwind/models/staging/: stg_customers.sql  stg_order_details.sql
northwind/models/staging/crm/: _crm__models.yml  _crm__sources.yml  stg_crm__nova_tabela.sql  stg_orders.sql  stg_products.sql
northwind/seeds/: nova_tabela.csv  region.csv  region_2.csv
